@@ -157,7 +157,8 @@ extern int	job_signal_wiki(char *cmd_ptr, int *err_code, char **err_msg)
 	if (slurm_rc != SLURM_SUCCESS) {
 		*err_code = -700;
 		*err_msg = slurm_strerror(slurm_rc);
-		error("wiki: Failed to signal job %u (%m)", jobid);
+		error("wiki: Failed to signal job %u: %s", 
+			jobid, slurm_strerror(slurm_rc));
 		return -1;
 	}
 
