@@ -419,7 +419,7 @@ _pick_step_nodes (struct job_record  *job_ptr,
 	bitstr_t *nodes_avail = NULL, *nodes_idle = NULL;
 	bitstr_t *nodes_picked = NULL, *node_tmp = NULL;
 	int error_code, nodes_picked_cnt = 0, cpus_picked_cnt, i;
-	//char *temp;
+/* 	char *temp; */
 	ListIterator step_iterator;
 	struct step_record *step_p;
 
@@ -438,6 +438,7 @@ _pick_step_nodes (struct job_record  *job_ptr,
 		bitstr_t *selected_nodes = NULL;
 		error_code = node_name2bitmap(step_spec->node_list, false, 
 					      &selected_nodes);
+		
 		if (error_code) {
 			info("_pick_step_nodes: invalid node list %s", 
 				step_spec->node_list);
@@ -452,6 +453,12 @@ _pick_step_nodes (struct job_record  *job_ptr,
 			goto cleanup;
 		}
 		if(step_spec->task_dist == SLURM_DIST_ARBITRARY) {
+			/* if we are in arbitrary mode we need to make
+			 * sure we aren't running on an elan switch.
+			 * If we aren't change the number of nodes
+			 * available to the number we were given since
+			 * that is what the user wants to run on. 
+			 */
 			if (!strcmp(slurmctld_conf.switch_type,
 				    "switch/elan")) {
 				error("Can't do an ARBITRARY task layout with "
@@ -460,16 +467,22 @@ _pick_step_nodes (struct job_record  *job_ptr,
 				xfree(step_spec->node_list);
 				step_spec->task_dist = SLURM_DIST_BLOCK;
 				FREE_NULL_BITMAP(selected_nodes);
-			}
-			step_spec->node_count = bit_set_count(nodes_avail);
+				step_spec->node_count =
+					bit_set_count(nodes_avail);
+			} else 
+				step_spec->node_count =
+					bit_set_count(selected_nodes);
 		}
 		if (selected_nodes) {
 			/* use selected nodes to run the job and
 			 * make them unavailable for future use */
-			nodes_picked = bit_copy(selected_nodes);
-			bit_not(selected_nodes);
-			bit_and(nodes_avail, selected_nodes);
-			bit_free(selected_nodes);
+
+			nodes_picked = bit_alloc(bit_size(nodes_avail));
+			if (nodes_picked == NULL)
+				fatal("bit_alloc malloc failure");
+			bit_free(nodes_avail);
+			nodes_avail = selected_nodes;
+			selected_nodes = NULL;
 		}
 	} else {
 		nodes_picked = bit_alloc(bit_size(nodes_avail));
@@ -530,6 +543,7 @@ _pick_step_nodes (struct job_record  *job_ptr,
 
 	if (step_spec->node_count) {
 		nodes_picked_cnt = bit_set_count(nodes_picked);
+/* 		info("got %d %d", step_spec->node_count, nodes_picked_cnt); */
 		if (nodes_idle 
 		    && (bit_set_count(nodes_idle) >= step_spec->node_count)
 		    && (step_spec->node_count > nodes_picked_cnt)) {
@@ -755,7 +769,8 @@ step_create(job_step_create_request_msg_t *step_specs,
 		xfree(step_specs->node_list);
 		step_specs->node_list = xstrdup(step_node_list);
 	}
-	
+/* 	info("got %s and %s looking for %d nodes", step_node_list, */
+/* 	     step_specs->node_list, step_specs->node_count); */
 	step_ptr->step_node_bitmap = nodeset;
 	
 	switch(step_specs->task_dist) {
